# Bachelor-Thesis

./: Bitmap16.cpp  Bitmap16.h  Bitmap32.cpp  Bitmap64.cpp  Bitmap8.h  FileInput.cpp  Makefile.am  Makefile.in  Parallel_SPAM.1  Spam.cpp  Tables.h
Parallel SPAM/: Bitmap16.c  Bitmap16.h  Bitmap32.cu  Bitmap32.h  Bitmap4.cu  Bitmap4.cuh  Bitmap64.cu  Bitmap64.h  Bitmap8.cu  Bitmap8.h  Bitmaps_cuda.cu  Bitmaps_cuda.h  DatasetInfo.h  FileInput.cpp  ResizableArray.h  SeqBitmap.cpp  SeqBitmap.h  Spam.cu  Stats.cpp  Stats.h  StringMap.h  Tables.h  TreeNode.h  config.h  vs2010_fix_cuda.h
Source Code/: Bitmap32.h  Bitmap4.cpp  Bitmap4.h  Bitmap64.h  Bitmap8.cpp  DatasetInfo.h  ResizableArray.h  SeqBitmap.cpp  SeqBitmap.h  Stats.cpp  Stats.h  StringMap.h  TreeNode.h  config.h
