####### kdevelop will overwrite this part!!! (begin)##########
bin_PROGRAMS = spam

## INCLUDES were found outside kdevelop specific part

spam_SOURCES = Stats.cpp Spam.cpp SeqBitmap.cpp FileInput.cpp Bitmap8.cpp Bitmap64.cpp Bitmap4.cpp Bitmap32.cpp Bitmap16.cpp 
spam_LDADD   = 


EXTRA_DIST = Bitmap16.cpp Bitmap16.h Bitmap32.cpp Bitmap32.h Bitmap4.cpp Bitmap4.h Bitmap64.cpp Bitmap64.h Bitmap8.cpp Bitmap8.h config.h DatasetInfo.h FileInput.cpp SeqBitmap.cpp SeqBitmap.h Spam.cpp Stats.cpp Stats.h Tables.h TreeNode.h 

####### kdevelop will overwrite this part!!! (end)############
# set the include path found by configure
INCLUDES= $(all_includes)
 
# the library search path.
spam_LDFLAGS = $(all_libraries) 
                                                                                
